--- a/index.html
+++ b/index.html
@@ -305,6 +305,77 @@
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
+        /* Floating Action Buttons */
+        .floating-buttons {
+            position: fixed;
+            right: 20px;
+            bottom: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            z-index: 1000;
+        }
+
+        .float-btn {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            transition: all 0.3s ease;
+            animation: pulse 2s infinite;
+        }
+
+        .float-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+        }
+
+        .whatsapp-btn {
+            background: #25D366;
+            color: white;
+        }
+
+        .call-btn {
+            background: #007bff;
+            color: white;
+        }
+
+        .float-btn svg {
+            width: 30px;
+            height: 30px;
+            fill: white;
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            }
+            50% {
+                box-shadow: 0 4px 20px rgba(37, 211, 102, 0.6);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .floating-buttons {
+                right: 15px;
+                bottom: 15px;
+            }
+
+            .float-btn {
+                width: 55px;
+                height: 55px;
+            }
+
+            .float-btn svg {
+                width: 26px;
+                height: 26px;
+            }
+        }
+
         /* Footer */
         footer {
             background: #1e3c72;
@@ -607,21 +678,43 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <strong>📞 Phone</strong>
-                    +91-XXXXX-XXXXX
+                    +91 78892 57045
                 </div>
                 <div class="contact-item">
                     <strong>✉️ Email</strong>
-                    info@sidhiassociates.com
+                    siddhiandassociatess@gmail.com
                 </div>
                 <div class="contact-item">
-                    <strong>📍 Address</strong>
-                    Your Office Address Here
+                    <strong>📍 Addresses</strong>
+                    MAA SHAKTI COOP SOCIETY, 605, Block A GHS 111, Sector 20, Panchkula, Haryana 134117 <br>
+                    Sco 12, Ananta Square, Zirakpur, Punjab 140603<br>
+                    H. No. 1 opposite Sambhav Hospital, Gokul dairy road, Munshi Nagar phase-2,, Bareilly, Uttar Pradesh 243001<br>
+                    Krishvi Gavakshi, D513, near geetanjali school, Kaverappa Layout, Kadubeesanahalli, Bengaluru, Karnataka 560103<br>
                 </div>
             </div>
             
-            <a href="mailto:info@sidhiassociates.com" class="btn">Schedule a Consultation</a>
+            <a href="mailto:siddhiandassociatess@gmail.com" class="btn">Schedule a Consultation</a>
         </div>
     </section>
+
+    <!-- Floating Action Buttons -->
+    <div class="floating-buttons">
+        <a href="https://wa.me/917889257045?text=Hello%2C%20I%20would%20like%20to%20inquire%20about%20your%20CA%20services" 
+           target="_blank" 
+           class="float-btn whatsapp-btn" 
+           aria-label="Chat on WhatsApp">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+            </svg>
+        </a>
+        <a href="tel:+917889257045" 
+           class="float-btn call-btn" 
+           aria-label="Call us">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 00-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/>
+            </svg>
+        </a>
+    </div>
 
     <footer>
         <div class="container">
