--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidhi & Associates - Expert Chartered Accountants | Tax, GST, Audit Services</title>
     <meta name="description" content="Leading CA firm offering tax planning, GST compliance, audit services, and business advisory. 10+ years experience with 2-hour response time.">
+    <meta name="google-site-verification" content="JueFxPjtlhcdbP2j_JVFSrlizVMQp9f6p3c-iK2D17E" />
     <style>
         * {
             margin: 0;
