--- a/index.html
+++ b/index.html
@@ -764,8 +764,11 @@
                     siddhiandassociatess@gmail.com
                 </div>
                 <div class="contact-item">
-                    <strong>📍 Address</strong>
-                    Your Office Address Here
+                    <strong>📍 Addresses</strong>
+                    MAA SHAKTI COOP SOCIETY, 605, Block A GHS 111, Sector 20, Panchkula, Haryana 134117 <br>
+                    Sco 12, Ananta Square, Zirakpur, Punjab 140603<br>
+                    H. No. 1 opposite Sambhav Hospital, Gokul dairy road, Munshi Nagar phase-2,, Bareilly, Uttar Pradesh 243001<br>
+                    Krishvi Gavakshi, D513, near geetanjali school, Kaverappa Layout, Kadubeesanahalli, Bengaluru, Karnataka 560103<br>
                 </div>
             </div>
             
