--- a/index.html
+++ b/index.html
@@ -769,6 +769,7 @@
                     Sco 12, Ananta Square, Zirakpur, Punjab 140603<br>
                     H. No. 1 opposite Sambhav Hospital, Gokul dairy road, Munshi Nagar phase-2,, Bareilly, Uttar Pradesh 243001<br>
                     Krishvi Gavakshi, D513, near geetanjali school, Kaverappa Layout, Kadubeesanahalli, Bengaluru, Karnataka 560103<br>
+                    A-1105, Bulland Heights, Crossing Republik, Ghaziabad, Uttar Pradesh 201016<br>
                 </div>
             </div>
             
