--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
     <title>Sidhi & Associates - Expert Chartered Accountants in India | CA Services, Tax Filing, GST Compliance</title>
@@ -619,7 +620,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="/" class="logo">
-                    <img src="sidhi_logo.jpeg" alt="Sidhi and Asssociates Logo" class="logo">
+                    <img src="sidhi.png" alt="Sidhi and Asssociates Logo" class="logo">
                 </a>
                 <div class="header-cta">
                     <a href="tel:+917889257045" class="cta-phone">📞 +91 78892 57045</a>
