--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
@@ -120,6 +121,7 @@
         .logo-img {
             width: 60px;
             height: 60px;
+            object-fit: contain;
         }
 
         .logo-text h1 {
@@ -620,7 +622,11 @@
         <div class="container">
             <div class="header-content">
                 <a href="/" class="logo">
-                    <img src="sidhi.png" alt="Sidhi and Asssociates Logo" class="logo">
+                    <img src="sidhi.png" alt="Sidhi & Associates Logo" class="logo-img">
+                    <div class="logo-text">
+                        <h1>Sidhi & Associates</h1>
+                        <p>Chartered Accountants</p>
+                    </div>
                 </a>
                 <div class="header-cta">
                     <a href="tel:+917889257045" class="cta-phone">📞 +91 78892 57045</a>
@@ -688,42 +694,42 @@
                     <div class="service-icon">📊</div>
                     <h3>Tax Planning & Filing</h3>
                     <p>Expert ITR filing and strategic tax planning to minimize your tax liability legally. From ₹2,500.</p>
-                    <a href="/services/tax-planning-filling/" class="service-link">Learn More →</a>
+                    <a href="#contact" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">🧾</div>
                     <h3>GST Compliance</h3>
                     <p>Complete GST registration, return filing, and compliance management. Starting ₹5,000/month.</p>
-                    <a href="/services/gst-compliance/" class="service-link">Learn More →</a>
+                    <a href="#contact" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">🏢</div>
                     <h3>Company Incorporation</h3>
                     <p>Fast company registration - Pvt Ltd, LLP, OPC. Get your business started in 7-15 days.</p>
-                    <a href="/services/company-incorporation/" class="service-link">Learn More →</a>
+                    <a href="#contact" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">✅</div>
                     <h3>Audit Services</h3>
                     <p>Statutory, tax, and internal audits with detailed reports and recommendations.</p>
-                    <a href="/services/audit" class="service-link">Learn More →</a>
+                    <a href="#contact" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">💼</div>
                     <h3>Bookkeeping & Accounting</h3>
                     <p>Professional bookkeeping using Tally, QuickBooks. Real-time financial insights.</p>
-                    <a href="/services/bookkeeping" class="service-link">Learn More →</a>
+                    <a href="#contact" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">📈</div>
                     <h3>Business Advisory</h3>
                     <p>Strategic financial planning, business consulting, and growth advisory services.</p>
-                    <a href="/services/advisory" class="service-link">Learn More →</a>
+                    <a href="#contact" class="service-link">Learn More →</a>
                 </div>
             </div>
         </div>
@@ -820,31 +826,31 @@
                 <div class="service-card">
                     <h3>📍 Panchkula, Haryana</h3>
                     <p>MAA SHAKTI COOP SOCIETY, 605, Block A GHS 111, Sector 20<br>Panchkula, Haryana 134117</p>
-                    <a href="/locations/panchkula" class="service-link">Visit Page →</a>
+                    <a href="#contact" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
                     <h3>📍 Zirakpur, Punjab</h3>
                     <p>Sco 12, Ananta Square, Zirakpur<br>Punjab 140603</p>
-                    <a href="/locations/zirakpur" class="service-link">Visit Page →</a>
+                    <a href="#contact" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
                     <h3>📍 Bareilly, UP</h3>
                     <p>H. No. 1 opposite Sambhav Hospital, Gokul dairy road, Munshi Nagar phase-2<br>Bareilly, UP 243001</p>
-                    <a href="/locations/bareilly" class="service-link">Visit Page →</a>
+                    <a href="#contact" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
                     <h3>📍 Bangalore, Karnataka</h3>
                     <p>Krishvi Gavakshi, D513, near geetanjali school, Kaverappa Layout, Kadubeesanahalli<br>Bengaluru, KA 560103</p>
-                    <a href="/locations/bangalore" class="service-link">Visit Page →</a>
+                    <a href="#contact" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
                     <h3>📍 Ghaziabad, UP</h3>
                     <p>A-1105, Bulland Heights, Crossing Republik<br>Ghaziabad, UP 201016</p>
-                    <a href="/locations/ghaziabad" class="service-link">Visit Page →</a>
+                    <a href="#contact" class="service-link">Contact Us →</a>
                 </div>
             </div>
         </div>
@@ -900,22 +906,22 @@
                 <div class="footer-section">
                     <h3>Our Services</h3>
                     <ul>
-                        <li><a href="/services/tax-planning">Tax Planning & Filing</a></li>
-                        <li><a href="/services/gst-compliance">GST Compliance</a></li>
-                        <li><a href="/services/company-incorporation">Company Incorporation</a></li>
-                        <li><a href="/services/audit">Audit Services</a></li>
-                        <li><a href="/services/bookkeeping">Bookkeeping</a></li>
+                        <li><a href="#services">Tax Planning & Filing</a></li>
+                        <li><a href="#services">GST Compliance</a></li>
+                        <li><a href="#services">Company Incorporation</a></li>
+                        <li><a href="#services">Audit Services</a></li>
+                        <li><a href="#services">Bookkeeping</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>Our Locations</h3>
                     <ul>
-                        <li><a href="/panchkula">Panchkula</a></li>
-                        <li><a href="/zirakpur">Zirakpur</a></li>
-                        <li><a href="/bareilly">Bareilly</a></li>
-                        <li><a href="/bangalore">Bangalore</a></li>
-                        <li><a href="/ghaziabad">Ghaziabad</a></li>
+                        <li><a href="#locations">Panchkula</a></li>
+                        <li><a href="#locations">Zirakpur</a></li>
+                        <li><a href="#locations">Bareilly</a></li>
+                        <li><a href="#locations">Bangalore</a></li>
+                        <li><a href="#locations">Ghaziabad</a></li>
                     </ul>
                 </div>
 
