--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                     <div class="service-icon">📊</div>
                     <h3>Tax Planning & Filing</h3>
                     <p>Expert ITR filing and strategic tax planning to minimize your tax liability legally. From ₹2,500.</p>
-                    <a href="#contact" class="service-link">Learn More →</a>
+                    <a href="/services/tax-planning-filing/" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
@@ -722,7 +722,7 @@
                     <div class="service-icon">💼</div>
                     <h3>Bookkeeping & Accounting</h3>
                     <p>Professional bookkeeping using Tally, QuickBooks. Real-time financial insights.</p>
-                    <a href="#contact" class="service-link">Learn More →</a>
+                    <a href="/services/bookkeeping-and-accounting/" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
@@ -826,25 +826,25 @@
                 <div class="service-card">
                     <h3>📍 Panchkula, Haryana</h3>
                     <p>MAA SHAKTI COOP SOCIETY, 605, Block A GHS 111, Sector 20<br>Panchkula, Haryana 134117</p>
-                    <a href="#contact" class="service-link">Contact Us →</a>
+                    <a href=/panchkula/" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
                     <h3>📍 Zirakpur, Punjab</h3>
                     <p>Sco 12, Ananta Square, Zirakpur<br>Punjab 140603</p>
-                    <a href="#contact" class="service-link">Contact Us →</a>
+                    <a href="/zirakpur/" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
                     <h3>📍 Bareilly, UP</h3>
                     <p>H. No. 1 opposite Sambhav Hospital, Gokul dairy road, Munshi Nagar phase-2<br>Bareilly, UP 243001</p>
-                    <a href="#contact" class="service-link">Contact Us →</a>
+                    <a href="/bareilly/" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
                     <h3>📍 Bangalore, Karnataka</h3>
                     <p>Krishvi Gavakshi, D513, near geetanjali school, Kaverappa Layout, Kadubeesanahalli<br>Bengaluru, KA 560103</p>
-                    <a href="#contact" class="service-link">Contact Us →</a>
+                    <a href="/bangalore/" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
@@ -906,21 +906,21 @@
                 <div class="footer-section">
                     <h3>Our Services</h3>
                     <ul>
-                        <li><a href="#services">Tax Planning & Filing</a></li>
+                        <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
                         <li><a href="#services">GST Compliance</a></li>
                         <li><a href="#services">Company Incorporation</a></li>
                         <li><a href="#services">Audit Services</a></li>
-                        <li><a href="#services">Bookkeeping</a></li>
+                        <li><a href="/services/bookkeeping-and-accounting/">Bookkeeping</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>Our Locations</h3>
                     <ul>
-                        <li><a href="#locations">Panchkula</a></li>
-                        <li><a href="#locations">Zirakpur</a></li>
-                        <li><a href="#locations">Bareilly</a></li>
-                        <li><a href="#locations">Bangalore</a></li>
+                        <li><a href="/panchkula/">Panchkula</a></li>
+                        <li><a href="/zirakpur/">Zirakpur</a></li>
+                        <li><a href="/bareilly/">Bareilly</a></li>
+                        <li><a href="/bangalore/">Bangalore</a></li>
                         <li><a href="#locations">Ghaziabad</a></li>
                     </ul>
                 </div>
