--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                     <div class="service-icon">🧾</div>
                     <h3>GST Compliance</h3>
                     <p>Complete GST registration, return filing, and compliance management. Starting ₹5,000/month.</p>
-                    <a href="#contact" class="service-link">Learn More →</a>
+                    <a href="/services/gst-compliance/" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
@@ -907,7 +907,7 @@
                     <h3>Our Services</h3>
                     <ul>
                         <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
-                        <li><a href="#services">GST Compliance</a></li>
+                        <li><a href="/services/gst-compliance/">GST Compliance</a></li>
                         <li><a href="#services">Company Incorporation</a></li>
                         <li><a href="#services">Audit Services</a></li>
                         <li><a href="/services/bookkeeping-and-accounting/">Bookkeeping</a></li>
