--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
                     <ul>
                         <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
                         <li><a href="/services/gst-compliance/">GST Compliance</a></li>
-                        <li><a href="#services">Company Incorporation</a></li>
+                        <li><a href="/services/company-incorporation/">Company Incorporation</a></li>
                         <li><a href="#services">Audit Services</a></li>
                         <li><a href="/services/bookkeeping-and-accounting/">Bookkeeping</a></li>
                     </ul>
