--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                 <div class="service-card">
                     <h3>📍 Panchkula, Haryana</h3>
                     <p>MAA SHAKTI COOP SOCIETY, 605, Block A GHS 111, Sector 20<br>Panchkula, Haryana 134117</p>
-                    <a href=/panchkula/" class="service-link">Contact Us →</a>
+                    <a href="/panchkula/" class="service-link">Contact Us →</a>
                 </div>
 
                 <div class="service-card">
