--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                     <div class="service-icon">✅</div>
                     <h3>Audit Services</h3>
                     <p>Statutory, tax, and internal audits with detailed reports and recommendations.</p>
-                    <a href="#contact" class="service-link">Learn More →</a>
+                    <a href="/services/audit-services/" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
@@ -909,7 +909,7 @@
                         <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
                         <li><a href="/services/gst-compliance/">GST Compliance</a></li>
                         <li><a href="/services/company-incorporation/">Company Incorporation</a></li>
-                        <li><a href="#services">Audit Services</a></li>
+                        <li><a href="/services/audit-services/">Audit Services</a></li>
                         <li><a href="/services/bookkeeping-and-accounting/">Bookkeeping</a></li>
                     </ul>
                 </div>
