--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                     <div class="service-icon">🏢</div>
                     <h3>Company Incorporation</h3>
                     <p>Fast company registration - Pvt Ltd, LLP, OPC. Get your business started in 7-15 days.</p>
-                    <a href="#contact" class="service-link">Learn More →</a>
+                    <a href="/services/company-incorporation/" class="service-link">Learn More →</a>
                 </div>
 
                 <div class="service-card">
