Update index.html bookkeeping

--- a/services/bookkeeping-and-accounting/index.html
+++ b/services/bookkeeping-and-accounting/index.html
@@ -1274,11 +1274,11 @@
                 <div class="footer-section">
                     <h3>Our Services</h3>
                     <ul>
-                        <li><a href="/#services">Tax Planning & Filing</a></li>
-                        <li><a href="/#services">GST Compliance</a></li>
-                        <li><a href="/#services">Company Incorporation</a></li>
-                        <li><a href="/#services">Audit Services</a></li>
-                        <li><a href="#services">Bookkeeping & Accounting</a></li>
+                        <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
+                        <li><a href="/services/gst-compliance/">GST Compliance</a></li>
+                        <li><a href="/services/company-incorporation/">Company Incorporation</a></li>
+                        <li><a href="/services/audit-services/">Audit Services</a></li>
+                        <li><a href="/services/bookkeeping-and-accounting/">Bookkeeping & Accounting</a></li>
                     </ul>
                 </div>
 
