--- a/services/company-incorporation/index.html
+++ b/services/company-incorporation/index.html
@@ -1453,7 +1453,7 @@
                         <li><a href="/services/tax-planning-filing/">Tax Planning & Filing</a></li>
                         <li><a href="/services/gst-compliance/">GST Compliance</a></li>
                         <li><a href="/services/company-incorporation/">Company Incorporation</a></li>
-                        <li><a href="/#services">Audit Services</a></li>
+                        <li><a href="/services/audit-services/">Audit Services</a></li>
                         <li><a href="/services/bookkeeping-and-accounting/">Bookkeeping & Accounting</a></li>
                     </ul>
                 </div>
