--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                     <div class="service-icon">📈</div>
                     <h3>Business Advisory</h3>
                     <p>Strategic financial planning, business consulting, and growth advisory services.</p>
-                    <a href="#contact" class="service-link">Learn More →</a>
+                    <a href="/services/business-advisory/" class="service-link">Learn More →</a>
                 </div>
             </div>
         </div>
@@ -850,7 +850,7 @@
                 <div class="service-card">
                     <h3>📍 Ghaziabad, UP</h3>
                     <p>A-1105, Bulland Heights, Crossing Republik<br>Ghaziabad, UP 201016</p>
-                    <a href="#contact" class="service-link">Contact Us →</a>
+                    <a href="/ghaziabad/" class="service-link">Contact Us →</a>
                 </div>
             </div>
         </div>
@@ -921,7 +921,7 @@
                         <li><a href="/zirakpur/">Zirakpur</a></li>
                         <li><a href="/bareilly/">Bareilly</a></li>
                         <li><a href="/bangalore/">Bangalore</a></li>
-                        <li><a href="#locations">Ghaziabad</a></li>
+                        <li><a href="/ghaziabad/">Ghaziabad</a></li>
                     </ul>
                 </div>
 
