--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
                 <div class="service-card">
                     <h3>📍 Lucknow, UP</h3>
                     <p>106, Sector A, Omaxe City, Lucknow, Uttar Pradesh 226025</p>
-                    <a href="https://sidhiandassociates.github.io/" class="service-link">Contact Us →</a>
+                    <a href="https://sidhiandassociates.github.io/lucknow/" class="service-link">Contact Us →</a>
                 </div>
             </div>
         </div>
