--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
     <!-- Navigation -->
     <nav>
         <div class="container">
-            <a href="#services">Services</a>
+            <a href="/services/">Services</a>
             <a href="#why-us">Why Us</a>
             <a href="#testimonials">Testimonials</a>
             <a href="#locations">Locations</a>
