--- a/panchkula/index.html
+++ b/panchkula/index.html
@@ -1592,7 +1592,7 @@
                         MAA SHAKTI COOP SOCIETY<br>
                         605, Block A GHS 111, Sector 20<br>
                         Panchkula, Haryana 134117<br>
-                        <a href="https://goo.gl/maps/yourlink" target="_blank">Get Directions →</a>
+                        <a href="https://maps.app.goo.gl/5RmMNWuyPxSN28aK8" target="_blank">Get Directions →</a>
                     </div>
 
                     <div class="contact-item">
@@ -1695,8 +1695,6 @@
                 <p>&copy; 2024 Sidhi & Associates - Panchkula Office. All Rights Reserved.</p>
                 <p style="margin-top: 10px;">Professional CA Services in Panchkula, Haryana | Serving Chandigarh Tricity</p>
                 <p style="margin-top: 10px; font-size: 0.9em;">
-                    <a href="/privacy-policy/" style="color: var(--white); margin: 0 10px;">Privacy Policy</a> | 
-                    <a href="/terms-conditions/" style="color: var(--white); margin: 0 10px;">Terms & Conditions</a> | 
                     <a href="/sitemap.xml" style="color: var(--white); margin: 0 10px;">Sitemap</a>
                 </p>
             </div>
