--- a/calculator/emi-calculator/index.html
+++ b/calculator/emi-calculator/index.html
@@ -771,8 +771,8 @@
                         <li><a href="https://sidhiandassociates.github.io/">Home</a></li>
                         <li><a href="https://sidhiandassociates.github.io/about/">About Us</a></li>
                         <li><a href="https://sidhiandassociates.github.io/services/">Our Services</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/contact/">Contact Us</a></li>
-                        <li><a href="https://sidhiandassociates.github.io/privacy/">Privacy Policy</a></li>
+                        <!-- <li><a href="https://sidhiandassociates.github.io/contact/">Contact Us</a></li>
+                        <li><a href="https://sidhiandassociates.github.io/privacy/">Privacy Policy</a></li> -->
                     </ul>
                 </div>
                 
