--- a/calculator/index.html
+++ b/calculator/index.html
@@ -939,8 +939,8 @@
                 <p>&copy; 2024 Sidhi & Associates. All Rights Reserved.</p>
                 <p style="margin-top: 10px;">Professional Financial Calculators | Free Tools by Expert CAs</p>
                 <p style="margin-top: 10px; font-size: 0.9em;">
-                    <a href="/privacy-policy/" style="color: var(--white);">Privacy Policy</a> | 
-                    <a href="/terms-conditions/" style="color: var(--white);">Terms & Conditions</a> | 
+                    <!-- <a href="/privacy-policy/" style="color: var(--white);">Privacy Policy</a> | 
+                    <a href="/terms-conditions/" style="color: var(--white);">Terms & Conditions</a> |  -->
                     <a href="/sitemap.xml" style="color: var(--white);">Sitemap</a>
                 </p>
             </div>
