--- a/services/index.html
+++ b/services/index.html
@@ -66,7 +66,7 @@
             {"@type": "City", "name": "Ghaziabad"},
             {"@type": "City", "name": "Lucknow"}
         ],
-        "serviceType": ["Tax Services", "GST Services", "Audit Services", "Company Incorporation", "Business Advisory"]
+        "ProfessionalService": ["Tax Services", "GST Services", "Audit Services", "Company Incorporation", "Business Advisory"]
     }
     </script>
     
