--- a/services/dmat-account-opening-and-sip-investment-consultant/index.html
+++ b/services/dmat-account-opening-and-sip-investment-consultant/index.html
@@ -40,7 +40,7 @@
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "FinancialService",
+      "@type": "Service",
       "serviceType": "Investment Advisory & Demat Account Services",
       "name": "Demat Account Opening & SIP Investment Consultant",
       "description": "Comprehensive investment advisory services including demat account opening, SIP planning, mutual fund advisory, portfolio management, and wealth planning by SEBI registered advisors.",
