--- a/services/gst-registration/index.html
+++ b/services/gst-registration/index.html
@@ -28,7 +28,11 @@
       "provider": {
         "@type": "ProfessionalService",
         "name": "Sidhi & Associates",
-        "telephone": "+917889257045"
+        "telephone": "+917889257045",
+        "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "IN"
+        }
       }
     }
     </script>
