--- a/index.html
+++ b/index.html
@@ -724,42 +724,42 @@
                     <div class="service-icon">📊</div>
                     <h3>Tax Planning & Filing</h3>
                     <p>Expert ITR filing and strategic tax planning to minimize your tax liability legally. From ₹2,500.</p>
-                    <a href="https://sidhiandassociates.github.io/services/tax-planning-filing/" class="service-link">Learn More →</a>
+                    <a href="https://sidhiandassociates.github.io/services/tax-planning-filing/" class="service-link">Learn More About Tax Planning & Filing</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">🧾</div>
                     <h3>GST Compliance</h3>
                     <p>Complete GST registration, return filing, and compliance management. Starting ₹5,000/month.</p>
-                    <a href="https://sidhiandassociates.github.io/services/gst-compliance/" class="service-link">Learn More →</a>
+                    <a href="https://sidhiandassociates.github.io/services/gst-compliance/" class="service-link">Learn More About GST Compliance</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">🏢</div>
                     <h3>Company Incorporation</h3>
                     <p>Fast company registration - Pvt Ltd, LLP, OPC. Get your business started in 7-15 days.</p>
-                    <a href="https://sidhiandassociates.github.io/services/company-incorporation/" class="service-link">Learn More →</a>
+                    <a href="https://sidhiandassociates.github.io/services/company-incorporation/" class="service-link">Learn More About Company Incorporation</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">✅</div>
                     <h3>Audit Services</h3>
                     <p>Statutory, tax, and internal audits with detailed reports and recommendations.</p>
-                    <a href="https://sidhiandassociates.github.io/services/audit-services/" class="service-link">Learn More →</a>
+                    <a href="https://sidhiandassociates.github.io/services/audit-services/" class="service-link">Learn More About Audit Services</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">💼</div>
                     <h3>Bookkeeping & Accounting</h3>
                     <p>Professional bookkeeping using Tally, QuickBooks. Real-time financial insights.</p>
-                    <a href="https://sidhiandassociates.github.io/services/bookkeeping-and-accounting/" class="service-link">Learn More →</a>
+                    <a href="https://sidhiandassociates.github.io/services/bookkeeping-and-accounting/" class="service-link">Learn More About Bookkeeping & Accounting</a>
                 </div>
 
                 <div class="service-card">
                     <div class="service-icon">📈</div>
                     <h3>Business Advisory</h3>
                     <p>Strategic financial planning, business consulting, and growth advisory services.</p>
-                    <a href="https://sidhiandassociates.github.io/services/business-advisory/" class="service-link">Learn More →</a>
+                    <a href="https://sidhiandassociates.github.io/services/business-advisory/" class="service-link">Learn More About Business Advisory</a>
                 </div>
             </div>
         </div>
