--- a/panchkula/index.html
+++ b/panchkula/index.html
@@ -12,7 +12,7 @@
     
     <!-- Primary Meta Tags - OPTIMIZED -->
     <title>Best CA in Panchkula | Expert Tax & GST Services | 2-Hour Response | Sidhi & Associates</title>
-    <meta name="title" content="Best CA in Panchkula | Expert Tax & GST Services | 2-Hour Response">
+    <meta name="title" content="Best CA in Panchkula | Expert Tax & GST Services">
     <meta name="description" content="Top-rated CA firm in Sector 20, Panchkula. 10+ years experience in Tax Filing, GST, Audit & Company Registration. Free consultation. Call +91 78892 57045 today!">
     <meta name="keywords" content="CA in Panchkula, best Chartered Accountant Panchkula, CA services Panchkula Haryana, tax consultant Panchkula, GST registration Panchkula, company incorporation Panchkula, audit services Panchkula, CA near me Panchkula, Sector 20 Panchkula CA, affordable CA Panchkula">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
