--- a/zirakpur/index.html
+++ b/zirakpur/index.html
@@ -11,7 +11,7 @@
     
     <!-- Primary Meta Tags - IMPROVED -->
     <title>CA in Zirakpur | Chartered Accountant near Ananta Square | ITR ₹999 | GST ₹3000</title>
-    <meta name="title" content="CA in Zirakpur | Chartered Accountant near Ananta Square | ITR ₹999 | GST ₹3000">
+    <meta name="title" content="CA in Zirakpur | Chartered Accountant near Ananta Square">
     <meta name="description" content="Best CA in Zirakpur near Ananta Square, VIP Road. ITR Filing ₹999, GST ₹3000, Company Registration ₹8999. Walk-in CA Office. Same-day service. 4.9★ rated. Call 78892-57045">
     <meta name="keywords" content="CA in Zirakpur, Chartered Accountant Zirakpur, CA near me Zirakpur, CA near Ananta Square, best CA Zirakpur, ITR filing Zirakpur, GST registration Zirakpur, company registration Zirakpur, tax consultant Zirakpur, CA VIP Road Zirakpur">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large">
