--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>Sidhi & Associates - Expert Chartered Accountants in India | CA Services, Tax Filing, GST Compliance</title>
+    <title>Sidhi & Associates: CA Services, ITR, GST, Accounting & Tax Filing</title>
     <meta name="title" content="Sidhi & Associates - Expert Chartered Accountants in India | CA Services, Tax Filing, GST Compliance">
     <meta name="description" content="Leading CA firm in India offering Income Tax Filing, GST Registration & Compliance, Company Incorporation, Audit Services & Business Advisory. 10+ years experience. Fast 2-hour response. Affordable pricing from ₹2,500. Call +91 78892 57045">
     <meta name="keywords" content="chartered accountant, CA services India, tax filing, GST registration, GST compliance, company incorporation, audit services, bookkeeping, business advisory, tax planning, ITR filing, statutory audit, tax audit, LLP registration, private limited company, startup CA, MSME accounting">
